dataset1235/2025-2/2868285114/users/1760111885/executions/2135592949_291286518.log
== SUBMISSION (2025-08-12 23:37:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:36:55)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 7
    print(num*)
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 7
    print(num*)
              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 7
    print(num*)
              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 7
    print(num*)
              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 7
    print(num*)
              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
